# topksongs

./: README.md  docker-compose.yml  init_topksongs.sh
consumer/: Dockerfile  logs  pyproject.toml
consumer/consumer/: list_topics.py  pubsub.py  spark_processor.py
docker/kafka/: Dockerfile
docker/spark/: Dockerfile
producer/: pyproject.toml
producer/producer/: song_generator.py
